update to cad editor 4.4, python 3

--- a/CadEditor-example-dwd.ipynb
+++ b/CadEditor-example-dwd.ipynb
@@ -24,10 +24,11 @@
    "outputs": [],
    "source": [
     "import cadEditorPath\n",
-    "from cadEditorPath import cadEditorDir\n",
+    "from cadEditorPath import cadEditorDir, picPath\n",
     "#import sys, os\n",
     "#cadEditorDir = os.path.abspath(\"../CadEditor/\") + \"/\"\n",
-    "#sys.path.append(cadEditorDir)"
+    "#sys.path.append(cadEditorDir)\n",
+    "#picPath = \"D:/CadEditorPythonExamples/\""
    ]
   },
   {
@@ -40,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import clr\n",
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,14 +209,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import display, Image\n",
-    "picPath = \"D:/CadEditorPythonExamples/\"\n",
     "#сохраняем картинку в файл:\n",
     "videoBitmap.Save(picPath+\"chr0.png\")\n",
     "\n",
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +305,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
