--- a/CadEditor-example-yonoid.ipynb
+++ b/CadEditor-example-yonoid.ipynb
@@ -13,12 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "cadEditorDir = \"d:/DEV/CadEditor/CadEditor/\"\n",
-    "sys.path.append(cadEditorDir)\n",
+    "import cadEditorPath\n",
+    "from cadEditorPath import cadEditorDir, picPath\n",
     "\n",
     "import clr\n",
     "clr.AddReference(\"CadEditor\")\n",
@@ -34,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "romName = cadEditorDir + \"/Yo! Noid (U) [!].nes\"\n",
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chrBitmap = video.makeImageRectangle(chrData, palData, 0, False)"
@@ -93,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,14 +108,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import display, Image\n",
-    "picPath = \"D:/CadEditorPythonExamples/\"\n",
     "#сохраняем картинку в файл:\n",
     "chrBitmap.Save(picPath+\"chr0.png\")\n",
     "\n",
@@ -148,8 +152,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def renderBlock(TILE_INDEX_ADDR, PAL_BYTE_ADDR):\n",
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -380,8 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "screenData = []\n",
@@ -402,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +420,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
