update to Cadeditor 4.4, python 3

--- a/CadEditor-blocks16x1-findAllAttributes.ipynb
+++ b/CadEditor-blocks16x1-findAllAttributes.ipynb
@@ -8,9 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "cadEditorDir = \"d:/DEV/CadEditor/CadEditor/\"\n",
-    "sys.path.append(cadEditorDir)"
+    "import cadEditorPath\n",
+    "from cadEditorPath import cadEditorDir, picPath"
    ]
   },
   {
@@ -42,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#romName    = cadEditorDir + \"Teenage Mutant Ninja Turtles III - The Manhattan Project (U) [!].nes\"\n",
@@ -71,28 +68,25 @@
    "outputs": [],
    "source": [
     "video = Video()\n",
-    "from IPython.display import display, Image\n",
-    "picPath = \"D:/CadEditorPythonExamples/\""
+    "from IPython.display import display, Image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#//make capcom screen image\n",
     "#Bitmap makeScreen(int scrNo, int levelNo, int videoNo, int bigBlockNo, int blockNo, int palleteNo, float scale = 2.0f, bool withBorders = true)\n",
-    "for bc in xrange(256,32,-1):\n",
+    "for bc in range(256,32,-1):\n",
     "    ConfigScript.palBytesAddr = ConfigScript.getTilesAddr(0) + bc*16\n",
     "    #ConfigScript.palBytesAddr = ConfigScript.getTilesAddr(0) + bc\n",
     "    #ConfigScript.palBytesAddr = ConfigScript.getTilesAddr(0) + 83*16 + bc\n",
-    "    scr = video.makeScreen(0, 0, 0x90, 0, 0, 0, 1.0, False)\n",
+    "    scr = video.makeScreen(0, 0, 0, 0, 0, 0)\n",
     "    fn = picPath+\"%03d.png\"%bc\n",
     "    scr.Save(fn)\n",
-    "    print bc\n",
+    "    print(bc)\n",
     "    display(Image(fn))"
    ]
   },
@@ -108,23 +102,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
