--- a/CadEditor-blocks16x1-renderAllFirstBlocks.ipynb
+++ b/CadEditor-blocks16x1-renderAllFirstBlocks.ipynb
@@ -41,12 +41,13 @@
     "     example:\n",
     "       applyToAllFilesInFolder (\"C:\", [\".txt\"], lambda filename:None)\n",
     "  \"\"\"\n",
-    "  def visit(arg, dirname, names):\n",
+    "  def visit(dirname, names):\n",
     "    for name in names:\n",
     "      shortName, ext = os.path.splitext(name)\n",
     "      if ext.lower() in fileexts:\n",
     "        func(os.path.join(dirname, name), *params)\n",
-    "  os.walk(folder, visit, 0)"
+    "  for dirname, _, names in os.walk(folder):\n",
+    "    visit(dirname, names)"
    ]
   },
   {
@@ -186,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#draw first block of config\n",
