--- a/CadEditor-Felix-decompress.ipynb
+++ b/CadEditor-Felix-decompress.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from cadEditorPath import cadEditorDir\n",
@@ -37,25 +35,20 @@
     "romName = os.path.join(cadEditorDir, \"Felix the Cat (U) [!].nes\")\n",
     "with open(romName, \"rb\") as f:\n",
     "    d = f.read()\n",
-    "d = map(ord, d)\n",
     "rom = d[:]"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Вспомогательные функции"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def readWord(d, addr):\n",
@@ -100,21 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lines array addr   : 0xb5f9\n",
-      "Compress dict addr : 0xb50b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "LEVEL_NO = 8\n",
     "\n",
@@ -123,8 +106,8 @@
     "linesPtrsAddr = addPtrToLinesPtr(readWord(d,baseAddr-2), LEVEL_NO)\n",
     "compressAddr = addPtrToCompress (readWord(d,baseAddr)  , LEVEL_NO)\n",
     "    \n",
-    "print \"Lines array addr   :\", hex(linesPtrsAddr)\n",
-    "print \"Compress dict addr :\", hex(compressAddr)"
+    "print(\"Lines array addr   :\", hex(linesPtrsAddr))\n",
+    "print(\"Compress dict addr :\", hex(compressAddr))"
    ]
   },
   {
@@ -136,15 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def readCompress(d, addr):\n",
     "    ans = []\n",
-    "    for c in xrange(128):\n",
+    "    for c in range(128):\n",
     "        ans.append((d[addr], d[addr+1]))\n",
     "        addr += 2\n",
     "    return ans"
@@ -152,22 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compressed Array: [(24, 0), (16, 0), (15, 0), (12, 0), (2, 0), (3, 0), (13, 0), (17, 0), (18, 0), (14, 0), (11, 0), (5, 0), (4, 0), (2, 73), (19, 0), (2, 75), (2, 66), (10, 0), (2, 4), (6, 0), (3, 73), (2, 67), (2, 115), (15, 3), (4, 3), (19, 1), (20, 1), (2, 74), (3, 115), (8, 0), (9, 0), (3, 1), (4, 1), (5, 50), (2, 54), (2, 50), (7, 54), (14, 50), (5, 22), (2, 15), (14, 1), (6, 26), (10, 54), (15, 50), (4, 54), (6, 50), (9, 50), (3, 54), (18, 50), (13, 50), (11, 50), (5, 26), (7, 50), (8, 50), (10, 50), (12, 50), (4, 50), (3, 26), (8, 54), (3, 50), (12, 1), (14, 22), (5, 15), (14, 26), (5, 54), (13, 22), (4, 15), (13, 26), (5, 115), (11, 22), (9, 26), (6, 15), (15, 26), (13, 62), (13, 33), (3, 33), (5, 46), (2, 33), (5, 47), (11, 33), (2, 23), (18, 1), (2, 1), (176, 173), (176, 172), (172, 175), (173, 175), (167, 170), (175, 165), (36, 38), (40, 177), (165, 173), (177, 177), (171, 174), (171, 179), (176, 173), (177, 176), (173, 174), (172, 174), (175, 172), (170, 170), (172, 173), (177, 173), (176, 173), (171, 171), (179, 174), (173, 177), (177, 212), (205, 210), (204, 212), (197, 211), (203, 200), (211, 201), (205, 209), (204, 209), (203, 211), (206, 204), (206, 206), (205, 206), (219, 158), (228, 158), (238, 158), (250, 158), (5, 159), (16, 159), (27, 159), (37, 31), (45, 159)]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "compressedArr = readCompress(d, compressAddr)\n",
-    "print \"Compressed Array:\", compressedArr"
+    "print(\"Compressed Array:\", compressedArr)"
    ]
   },
   {
@@ -179,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -200,10 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def decompressLine(d, addr, LINE_HEIGHT = 24):\n",
@@ -239,10 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "levelWidths = [256*3, 256*3, 256*3+128, 256*4, 256*4, 256*3, 256*3, 256*1+128, 256*3]\n",
@@ -253,15 +220,15 @@
     "    WIDTH = levelWidths[LEVEL_NO]\n",
     "    HEIGHT = 24\n",
     "    curLinePtrsAddr = linesPtrsAddr\n",
-    "    for l in xrange(WIDTH):\n",
+    "    for l in range(WIDTH):\n",
     "        #print \"CUR_LINE_PTR\", hex(curLinePtrsAddr)\n",
     "        lineAddr = addPtrToLines(readWord(d, curLinePtrsAddr), LEVEL_NO)\n",
     "        #print \"LINE_ADDR\", hex(readWord(d, curLinePtrsAddr))\n",
     "        vals = decompressLine(d, lineAddr, HEIGHT)\n",
     "        #print vals\n",
     "        if len(vals) != HEIGHT:\n",
-    "            print \"Warning\", len(vals)\n",
-    "            print vals\n",
+    "            print(\"Warning\", len(vals))\n",
+    "            print(vals)\n",
     "            vals = vals[:HEIGHT]\n",
     "        ##assert(len(vals)== HEIGHT)\n",
     "        lines.append(vals)\n",
@@ -271,10 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lines = decompressScreen()\n",
@@ -283,16 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dumpName = os.path.join(cadEditorDir, \"settings_felix_the_cat/dump%d.bin\"%(LEVEL_NO+1))\n",
     "with open(dumpName, \"wb\") as f:\n",
-    "    v = \"\".join(map(chr, screen))\n",
-    "    f.write(v)"
+    "    f.write(bytes(screen))"
    ]
   },
   {
@@ -307,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -330,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +302,7 @@
     "with open(dumpName, \"rb\") as f:\n",
     "    d = f.read()\n",
     "    \n",
-    "screen = map(ord, d)"
+    "screen = d"
    ]
   },
   {
@@ -352,10 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compressorReplace(lines, compressedPair, index):\n",
@@ -384,10 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def rebuildCompress(screen, forbiddenArr, maxCompressSize = 256, LINE_LEN=24):\n",
@@ -400,8 +358,8 @@
     "            repeats = [list(g) for _, g in groupby(line)]\n",
     "            repeats = [(g[0],len(g)) for g in repeats]\n",
     "            for (tileNo,tileCount) in repeats:\n",
-    "                #for tc in xrange(tileCount, tileCount+1):\n",
-    "                for tc in xrange(2,tileCount+1):\n",
+    "                #for tc in range(tileCount, tileCount+1):\n",
+    "                for tc in range(2,tileCount+1):\n",
     "                    compressPair = tileNo, tc\n",
     "                    if compressPair in ans:\n",
     "                        ans[compressPair] += 1\n",
@@ -412,14 +370,14 @@
     "            (t,c), cnt = v\n",
     "            return -(c-1)*cnt\n",
     "    \n",
-    "        ans = sorted(ans.iteritems(), key = calcPoints)\n",
+    "        ans = sorted(ans.items(), key = calcPoints)\n",
     "        #filter and reverse values\n",
     "        newAns = []\n",
     "        for a in ans:\n",
     "            if (a[0][0]) < 0x80:\n",
     "                newAns.append((a[0][1],a[0][0]))\n",
     "        \n",
-    "        newAns = filter(lambda v: v not in forbiddenArr, newAns)\n",
+    "        newAns = list(filter(lambda v: v not in forbiddenArr, newAns))\n",
     "        if len(newAns) == 0:\n",
     "            break\n",
     "            \n",
@@ -448,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -460,8 +418,8 @@
     "        repeats = [list(g) for _, g in groupby(line)]\n",
     "        repeats = [(g[0],len(g)) for g in repeats]\n",
     "        for (tileNo,tileCount) in repeats:\n",
-    "            #for tc in xrange(tileCount, tileCount+1):\n",
-    "            for tc in xrange(2,tileCount+1):\n",
+    "            #for tc in range(tileCount, tileCount+1):\n",
+    "            for tc in range(2,tileCount+1):\n",
     "                compressPair = tileNo, tc\n",
     "                if compressPair in ans:\n",
     "                    ans[compressPair] += 1\n",
@@ -487,19 +445,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compression array: [(12, 0), (11, 0), (13, 0), (10, 0), (14, 0), (15, 0), (9, 0), (8, 0), (7, 0), (6, 0), (5, 0), (16, 0), (4, 0), (3, 0), (17, 0), (2, 0), (4, 1), (9, 50), (8, 50), (7, 50), (5, 50), (6, 50), (10, 50), (4, 50), (3, 1), (11, 50), (13, 50), (12, 50), (13, 33), (3, 50), (11, 33), (12, 33), (10, 33), (9, 33), (18, 0), (8, 33), (2, 1), (7, 33), (14, 50), (2, 50), (12, 1), (6, 33), (11, 1), (10, 1), (19, 0), (14, 1), (5, 33), (9, 1), (13, 1), (8, 1), (3, 33), (4, 33), (5, 115), (7, 1), (3, 115), (2, 115), (6, 1), (18, 1), (17, 1), (4, 115), (16, 1), (15, 1), (5, 1), (2, 33), (19, 1), (11, 22), (10, 22), (13, 26), (13, 22), (7, 54), (8, 54), (12, 26), (12, 22), (9, 22), (9, 26), (5, 22), (11, 26), (6, 54), (8, 26), (5, 54), (15, 50), (5, 26), (8, 22), (4, 54), (10, 26), (14, 26), (6, 26), (7, 26), (7, 22), (13, 62), (4, 22), (3, 54), (5, 15), (12, 62), (4, 15), (4, 26), (6, 22), (2, 54), (11, 62), (20, 1), (2, 15), (10, 62), (10, 54), (18, 50), (3, 22), (17, 50), (9, 62), (3, 26), (9, 54), (16, 50), (8, 62), (15, 3), (3, 15), (15, 26), (14, 22), (14, 3), (7, 62), (13, 3), (12, 3), (6, 62), (11, 3), (2, 73), (10, 3), (4, 3), (5, 62), (5, 47), (9, 3), (2, 26), (2, 22), (5, 46), (8, 3), (4, 47), (7, 3), (3, 73), (4, 46), (2, 4), (3, 3), (4, 62), (6, 3), (2, 75), (6, 15), (3, 46), (3, 47), (2, 67), (3, 62), (5, 3), (2, 3), (2, 62), (2, 47), (2, 46), (2, 74), (2, 66), (2, 23), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0), (0, 0)]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#comment all this cell for no rebuild RLE-dictionary\n",
     "\n",
@@ -511,7 +459,7 @@
     "#\n",
     "\n",
     "compressedArr = rebuildCompress(screen, [])\n",
-    "print \"Compression array:\", compressedArr\n",
+    "print(\"Compression array:\", compressedArr)\n",
     "\n",
     "#compressedArr = rebuildCompressNoDinamic(screen)\n",
     "#print compressedArr"
@@ -526,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -569,10 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compressScreen(screen, startDataAddr):\n",
@@ -605,21 +551,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compressed size: 5664\n",
-      "Compressed size: 5664\n",
-      "Final compressed arr (82 size): [(12, 0), (11, 0), (13, 0), (10, 0), (14, 0), (15, 0), (9, 0), (8, 0), (6, 0), (5, 0), (16, 0), (4, 0), (3, 0), (17, 0), (2, 0), (4, 1), (9, 50), (8, 50), (7, 50), (5, 50), (6, 50), (10, 50), (4, 50), (3, 1), (11, 50), (13, 50), (12, 50), (13, 33), (3, 50), (11, 33), (18, 0), (2, 1), (14, 50), (2, 50), (12, 1), (19, 0), (14, 1), (3, 33), (5, 115), (3, 115), (2, 115), (18, 1), (2, 33), (19, 1), (11, 22), (13, 26), (13, 22), (7, 54), (8, 54), (9, 26), (5, 22), (5, 54), (15, 50), (5, 26), (4, 54), (14, 26), (6, 26), (13, 62), (3, 54), (5, 15), (4, 15), (2, 54), (20, 1), (2, 15), (10, 54), (18, 50), (3, 26), (15, 3), (15, 26), (14, 22), (2, 73), (4, 3), (5, 47), (5, 46), (3, 73), (2, 4), (2, 75), (6, 15), (2, 67), (2, 74), (2, 66), (2, 23)]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "romPatchDataArrayAddr  = readWord(rom, linesPtrsAddr)\n",
     "\n",
@@ -628,7 +562,7 @@
     "while True:\n",
     "    linesAddrs, linesArray, compressedArrUsing = compressScreen(screen, romPatchDataArrayAddr)\n",
     "    forbiddenArr = []\n",
-    "    print \"Compressed size:\", len(linesArray)\n",
+    "    print(\"Compressed size:\", len(linesArray))\n",
     "    #print compressedArrUsing\n",
     "    for ca, car in zip(compressedArr, compressedArrUsing):\n",
     "        if car == 0 and ca != (0,0):\n",
@@ -638,8 +572,8 @@
     "        break\n",
     "    fullForbiddenArr.extend(forbiddenArr)\n",
     "    compressedArr = rebuildCompress(screen, fullForbiddenArr)\n",
-    "compressedArr = filter (lambda v: v!=(0,0), compressedArr)\n",
-    "print \"Final compressed arr (%d size):\" % len(compressedArr), compressedArr\n",
+    "compressedArr = list(filter(lambda v: v!=(0,0), compressedArr))\n",
+    "print(\"Final compressed arr (%d size):\" % len(compressedArr), compressedArr)\n",
     "\n",
     "#for la in linesAddrs:\n",
     "#    print hex(la)"
@@ -657,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -667,50 +601,29 @@
     "romName2 = os.path.join(cadEditorDir, \"Felix the Cat (U) [!]-2.nes\")\n",
     "with open(romName, \"rb\") as f:\n",
     "    d = f.read()\n",
-    "    d = map(ord, d)"
+    "    \n",
+    "d = list(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lines   addr:  0xb5f9\n",
-      "RleDict addr:  0xb50b\n",
-      "Data    addr:  0x9eeb\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "romPatchLinesArrayAddr = linesPtrsAddr\n",
-    "print \"Lines   addr: \", hex(romPatchLinesArrayAddr)\n",
+    "print(\"Lines   addr: \", hex(romPatchLinesArrayAddr))\n",
     "romPatchCompressArrayAddr = compressAddr\n",
-    "print \"RleDict addr: \", hex(romPatchCompressArrayAddr)\n",
+    "print(\"RleDict addr: \", hex(romPatchCompressArrayAddr))\n",
     "romPatchDataArrayAddr  = addBankOffset(readWord(d, linesPtrsAddr), LEVEL_NO)\n",
-    "print \"Data    addr: \", hex(romPatchDataArrayAddr)\n"
+    "print(\"Data    addr: \", hex(romPatchDataArrayAddr))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total data written: 5664\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#convert pointer to bytes\n",
     "dataLines = []\n",
@@ -718,7 +631,7 @@
     "    dataLines.extend(wordToBytes(addr))\n",
     "\n",
     "#write lines pointers\n",
-    "for x in xrange(len(dataLines)):\n",
+    "for x in range(len(dataLines)):\n",
     "    #we must save some bits in hi-bytes addr, because they used to encoding objects\n",
     "    curAddr = romPatchLinesArrayAddr+x\n",
     "    if x % 2 == 1:\n",
@@ -728,7 +641,7 @@
     "    else:\n",
     "        d[romPatchLinesArrayAddr+x] = dataLines[x]\n",
     "#write lines data\n",
-    "print \"Total data written:\", len(linesArray)\n",
+    "print(\"Total data written:\", len(linesArray))\n",
     "#print linesArray\n",
     "d[romPatchDataArrayAddr:romPatchDataArrayAddr+len(linesArray)] = linesArray\n",
     "#write compress dict\n",
@@ -736,9 +649,9 @@
     "d[romPatchCompressArrayAddr:romPatchCompressArrayAddr+len(compressedData)] = compressedData\n",
     "for i, dd in enumerate(d):\n",
     "    if dd > 256:\n",
-    "        print hex(i), dd\n",
+    "        print(hex(i), dd)\n",
     "with open(romName2, \"wb\") as f:\n",
-    "    f.write(\"\".join(map(chr, d)))"
+    "    f.write(bytes(d))"
    ]
   },
   {
@@ -771,23 +684,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
