--- a/CadEditor-find-unique-blocks.ipynb
+++ b/CadEditor-find-unique-blocks.ipynb
@@ -9,35 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "cadEditorDir = \"d:/DEV/CadEditor/CadEditor/\"\n",
-    "sys.path.append(cadEditorDir)"
+    "import cadEditorPath\n",
+    "from cadEditorPath import cadEditorDir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<System.Reflection.RuntimeAssembly at 0x3e0ef80>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import clr\n",
     "clr.AddReference(\"CadEditor\")\n",
@@ -47,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from CadEditor import Globals, ConfigScript, BigBlock\n",
@@ -60,10 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "configs = [\n",
@@ -77,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -91,246 +73,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------\n",
-      "ROMNAME Darkwing Duck (U) [!].nes\n",
-      "--------------------------------------------------\n",
-      "Unique tiles count\n",
-      "251 / 256\n",
-      "253 / 256\n",
-      "256 / 256\n",
-      "252 / 256\n",
-      "253 / 256\n",
-      "255 / 256\n",
-      "256 / 256\n",
-      "256 / 256\n",
-      "256 / 256\n",
-      "253 / 256\n",
-      "254 / 256\n",
-      "256 / 256\n",
-      "253 / 256\n",
-      "247 / 256\n",
-      "256 / 256\n",
-      "Unique blocks count:\n",
-      "158 / 256\n",
-      "245 / 256\n",
-      "204 / 256\n",
-      "170 / 256\n",
-      "252 / 256\n",
-      "232 / 256\n",
-      "247 / 256\n",
-      "255 / 256\n",
-      "Unique big blocks count:\n",
-      "252 / 256\n",
-      "243 / 256\n",
-      "254 / 256\n",
-      "255 / 256\n",
-      "254 / 256\n",
-      "255 / 256\n",
-      "254 / 256\n",
-      "239 / 256\n",
-      "Can save bytes: 1308\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "ROMNAME Chip 'n Dale Rescue Rangers (U) [!].nes\n",
-      "--------------------------------------------------\n",
-      "Unique tiles count\n",
-      "254 / 256\n",
-      "253 / 256\n",
-      "255 / 256\n",
-      "255 / 256\n",
-      "253 / 256\n",
-      "252 / 256\n",
-      "255 / 256\n",
-      "254 / 256\n",
-      "255 / 256\n",
-      "235 / 256\n",
-      "256 / 256\n",
-      "246 / 256\n",
-      "254 / 256\n",
-      "252 / 256\n",
-      "255 / 256\n",
-      "Unique blocks count:\n",
-      "240 / 256\n",
-      "239 / 256\n",
-      "207 / 256\n",
-      "244 / 256\n",
-      "237 / 256\n",
-      "229 / 256\n",
-      "211 / 256\n",
-      "256 / 256\n",
-      "Unique big blocks count:\n",
-      "203 / 256\n",
-      "255 / 256\n",
-      "223 / 256\n",
-      "236 / 256\n",
-      "248 / 256\n",
-      "206 / 256\n",
-      "213 / 256\n",
-      "238 / 256\n",
-      "Can save bytes: 1644\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "ROMNAME Duck Tales (U) [!].nes\n",
-      "--------------------------------------------------\n",
-      "Unique tiles count\n",
-      "255 / 256\n",
-      "255 / 256\n",
-      "255 / 256\n",
-      "255 / 256\n",
-      "255 / 256\n",
-      "Unique blocks count:\n",
-      "250 / 256\n",
-      "235 / 256\n",
-      "249 / 256\n",
-      "Unique big blocks count:\n",
-      "450 / 512\n",
-      "499 / 512\n",
-      "511 / 512\n",
-      "Can save bytes: 440\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "ROMNAME Duck Tales 2 (U) [!].nes\n",
-      "--------------------------------------------------\n",
-      "Unique tiles count\n",
-      "251 / 256\n",
-      "250 / 256\n",
-      "253 / 256\n",
-      "248 / 256\n",
-      "252 / 256\n",
-      "219 / 256\n",
-      "Unique blocks count:\n",
-      "232 / 256\n",
-      "233 / 256\n",
-      "202 / 256\n",
-      "256 / 256\n",
-      "256 / 256\n",
-      "Unique big blocks count:\n",
-      "207 / 256\n",
-      "196 / 256\n",
-      "170 / 256\n",
-      "Can save bytes: 1184\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "ROMNAME TaleSpin (E) [!].nes\n",
-      "--------------------------------------------------\n",
-      "Unique tiles count\n",
-      "228 / 256\n",
-      "248 / 256\n",
-      "222 / 256\n",
-      "251 / 256\n",
-      "255 / 256\n",
-      "256 / 256\n",
-      "241 / 256\n",
-      "231 / 256\n",
-      "231 / 256\n",
-      "256 / 256\n",
-      "256 / 256\n",
-      "256 / 256\n",
-      "206 / 256\n",
-      "195 / 256\n",
-      "235 / 256\n",
-      "Unique blocks count:\n",
-      "238 / 256\n",
-      "249 / 256\n",
-      "244 / 256\n",
-      "242 / 256\n",
-      "236 / 256\n",
-      "249 / 256\n",
-      "255 / 256\n",
-      "256 / 256\n",
-      "Unique big blocks count:\n",
-      "207 / 256\n",
-      "218 / 256\n",
-      "251 / 256\n",
-      "236 / 256\n",
-      "249 / 256\n",
-      "242 / 256\n",
-      "241 / 256\n",
-      "226 / 256\n",
-      "Can save bytes: 1028\n",
-      "--------------------------------------------------\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for romName, configName in configs:\n",
-    "    print \"-\"*50\n",
-    "    print \"ROMNAME\", romName\n",
-    "    print \"-\"*50\n",
+    "    print(\"-\"*50)\n",
+    "    print(\"ROMNAME\", romName)\n",
+    "    print(\"-\"*50)\n",
     "    Globals.loadData(cadEditorDir + romName, \"\", cadEditorDir + configName)\n",
     "    \n",
     "    totalFree = 0\n",
     "    \n",
-    "    print \"Unique tiles count\"\n",
+    "    print(\"Unique tiles count\")\n",
     "    vc = ConfigScript.videoOffset.recCount - 1\n",
-    "    for x in xrange(vc):\n",
-    "        v = list(ConfigScript.getVideoChunk(0x80 + x))\n",
+    "    for x in range(vc):\n",
+    "        v = list(ConfigScript.getVideoChunk(x))\n",
     "        tiles = list(chunks(v, 16))\n",
-    "        tiles = map(tuple, tiles)\n",
+    "        tiles = [tuple(x) for x in tiles]\n",
     "        tilesCount = len(tiles)\n",
     "        tiles = list(set(tiles))\n",
-    "        print len(tiles),\"/\",tilesCount\n",
+    "        print(len(tiles),\"/\",tilesCount)\n",
     "    \n",
-    "    print \"Unique blocks count:\"\n",
+    "    print(\"Unique blocks count:\")\n",
     "    b = ConfigScript.blocksOffset.recCount;\n",
     "    \n",
-    "    for x in xrange(b):\n",
+    "    for x in range(b):\n",
     "        blocks = ConfigScript.getBlocks(x)\n",
     "        blocksCount = len(blocks)\n",
     "        blocks = list(set(blocks))\n",
-    "        print len(blocks), \"/\", blocksCount\n",
+    "        print(len(blocks), \"/\", blocksCount)\n",
     "        totalFree += (blocksCount-len(blocks))*4\n",
     "\n",
-    "    print \"Unique big blocks count:\"\n",
+    "    print(\"Unique big blocks count:\")\n",
     "    bb = ConfigScript.bigBlocksOffsets[0].recCount;\n",
-    "    for x in xrange(bb):\n",
+    "    for x in range(bb):\n",
     "        bigBlocks = ConfigScript.getBigBlocksRecursive(0,x)\n",
     "        bigBlocksCount = len(bigBlocks)\n",
     "        bigBlocks = list(set(bigBlocks))\n",
-    "        print len(bigBlocks), \"/\", bigBlocksCount\n",
+    "        print(len(bigBlocks), \"/\", bigBlocksCount)\n",
     "        totalFree += (bigBlocksCount-len(bigBlocks))*4\n",
-    "    print \"Can save bytes:\", totalFree\n",
-    "    print \"-\"*50"
+    "    print(\"Can save bytes:\", totalFree)\n",
+    "    print(\"-\"*50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
